# image2txt-easyocr

./: README.md  easy_ocr.ipynb  pyproject.toml
