[tool.poetry]
name = "image2txt-easyocr"
version = "0.1.0"
description = ""
authors = ["Katsuyuki MURAKAMI <katsumura0822@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
opencv-python = "4.5.4.60"
easyocr = "^1.6.2"
numpy = "^1.24.3"
jupyter = "^1.0.0"
opencv-contrib-python = "4.5.4.60"
opencv-python-headless = "4.5.4.60"
matplotlib = "^3.7.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
